--- a/sass/pages/_how.scss
+++ b/sass/pages/_how.scss
@@ -11,6 +11,9 @@
         font-family: 'Nexa';
         color: get(main);
         width: 80%;
+        @include breakpoint(tablet,max){
+            width: 100%;
+        }
         margin: auto;
         .input-container{
             width: 90%;
@@ -21,6 +24,7 @@
                 @extend %text-trans-upper;
                 font-weight: 600    ;
                 margin: 0;
+                @extend %fs-tablet-sm
                 
             }
             input:not([type='reset'],[type='submit']) , select{
