--- a/sass/base/_resets.scss
+++ b/sass/base/_resets.scss
@@ -21,5 +21,8 @@ body{
     
 }
 .container{
-    max-width: 75%;
+    @include breakpoint(large_desktop){
+        //max-width: 75%;
+    }
+    
 }
