--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,1 +1,89 @@
 @use "./../tools" as *;
+.footer {
+    background: var(--gradientLTR);
+    padding: 5px;
+    .title{
+        color: var(--main);
+        font-weight: 300;
+        display: flex;
+        flex-direction: row;
+        &::after{
+            content: "";
+            flex: 1 1;
+            border-bottom: 0.0625rem solid #fff;
+            margin: auto 10px;
+        }
+    }
+    .quick-link{
+        margin-inline-start: 6rem;
+        @include breakpoint(tablet,max){
+            margin-inline-start: 0;
+        }
+        .nav-link{
+            color: #fff;
+            width: 5rem;
+        }
+    }
+    .Subscribe{
+        h5{
+            font-size: 1rem;
+            font-weight: 400;
+            color: var(--main);
+        }
+        .input-subscribe{
+            border: none;
+            font-size: 0.75rem;
+            color: #ccc;
+            padding: 0.65rem 0.75rem;
+            border-radius: .5rem;
+        }
+        .send{
+            border-radius: .5rem;
+            font-size: 0.75rem;
+            padding: 0.6rem 0.75rem;
+            background: var(--main);
+            border-color: var(--main);
+        }
+        p{
+            font-size: 0.55rem;
+            color: #fff;
+            font-weight: 100;
+        }
+        .download{
+            background: transparent;
+            border-color: #fff;
+            color: #fff;
+            padding: 0.6rem 0.75rem;
+            font-size: 0.75rem;
+            border-radius: 0.5rem;
+        }
+        .social-icon{
+            i{
+                font-size: 1.3rem;
+                color: #fff;
+            }
+        }
+    }
+    .copy-right{
+        p{
+            font-size: 1rem;
+            font-weight: 100;
+            color: #fff;
+        }
+    }
+    .px-5{
+        @include breakpoint(tablet,max){
+            padding: 0 !important;
+        }
+    }
+    .col-auto{
+        p{
+            @extend %fs-tablet-sm;
+        }
+    }
+    .mt-5 , .g-3{
+        @include breakpoint(tablet,max){
+            margin-top: 1rem !important;
+        }
+    }
+}
